# PGCE-3.0

./: .gitignore  README.md  encyclopedia-new.txt
Assets/: AFX1.mat  AFX2.mat  AUG_Mesh.asset  AchievementListNGUIController.cs  AchievementNGUI.cs  Achievements.cs  AdminDialogUI.cs  AdminEventSelectorNGUIController.cs  AlertNGUI.cs  AnimationPlayer.cs  AphexTwinMenu.cs  ArmoryNGUI.cs  BadDecisionFixage.cs  Bed.mat  Bookshelf.mat  Brown_Mushroom.mat  Bullet.mat  ButtonHandler.cs  Cactus.mat  Chest.mat  Clay.mat  Coal_Ore.mat  Cobblestone.mat  Cobblestone_Stairs.mat  Crafting_Table.mat  CursorChanger.cs  DamageZone.cs  Dandelion.mat  Dead_Bush.mat  DecibelMeasurer.cs  Dirt.mat  Door.prefab  Easings.cs  EditorOnlyDebug.cs  Enchantment_Table.mat  Encyclopedia.cs  EnderAI.cs  EnderAIPhoton.cs  EnderAIPoint.cs  EnderSpawner.cs  (+111 more)
PGCE Site/: main.js  package-lock.json
PGCE Websocket/: AccountParameters.cs  Encryption.cs  Helpers.cs  PGCE Websocket.csproj  PlayerSession.cs  PlayerSessionManager.cs  Server.cs
PGCE Websocket C/: Makefile
PGCE Websocket C/client/: CMakeLists.txt
PGCE Websocket C/client/include/: client.h  encryption.h
PGCE Websocket C/client/include/packets/: handshake.h  packet.h  register.h
PGCE Websocket C/client/src/: main.cpp
PGCE Websocket C/server/: CMakeLists.txt
PGCE Websocket C/server/include/: database.cpp  database.h  player_data.h  server.h
PGCE Websocket C/server/include/packets/: packet.h
PGCE Websocket C/server/src/: main.cpp
ProjectSettings/: EditorBuildSettings.asset  NetworkManager.asset  ProjectSettings.asset  (+3 more)
(+22721 files in other folders)
